2009-07-02  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Force vbr-max-bitrate to 320 when using mp3+vbr, since
	  gstreamer now defaults to 160 (stupid!).
	  (thanks psychoman, fix #15950)
	  release 1.4.4

2009-06-24  Gautier Portet <kassoulet gmail com>

	* po/: Rosetta sync. Update all translations.
	  Add Danish, English (Australia), Estonian, Japanese and Vietnamese
	  translations.

2009-06-15  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Activate GVfs authentication
	  so we can log to remote shares.
	  (Thanks ikus060, fix lp:386849)

2009-06-10  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py, po/*: update-po !
	  And marked "All files" for intl.
	  (Thanks Uwe)

2009-06-09  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py data/soundconverter.glade autogen.sh po/de.po:
	  Update german tranlation.
	  Plus some minor changes in autogen.
	  (Thanks Uwe)
	* src/soundconverter.py: Fix crash in query_duration when pipeline is null.
	  (fix lp:333024)

2009-05-27  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Change deprecated Tooltip code.
	  SoundConverter now requires GTK 2.12+!
	  (thanks Matt)

2009-05-19  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Reset status after clearing file list.
	  (Thanks Sean)
	* src/soundconverter.py: Allow loading glade file from source folder.
	  (Thanks Geoff)

2009-05-04  Gautier Portet <kassoulet gmail com>

	* po/fr.po: Update french translation. (thanks Olivier)
	* src/soundconverter.py: Fix unhandled exception when 
	  removing original files went bad.
	  (fix lp:278782, thanks surreal)

2009-04-22  Gautier Portet <kassoulet gmail com>

	* po/bg.po: Add Bulgarian translation. (thanks Nikola)

2009-04-14  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix TagReader freeze when adding
	  m4p files. (lp:263889)
	  release 1.4.3

2009-03-11  Gautier Portet <kassoulet gmail com>
